// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Notifications) Notifications renders to correct snapshot with items in the queue 1`] = `
.c4 {
  text-align: center;
}

.c4[type=button] {
  line-height: normal;
  font-weight: normal;
}

.c4 .md-icon-text {
  font-weight: normal;
}

.c4 .md-icon {
  color: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 8px;
  background-color: rgb(49,49,49);
  width: 344px;
  min-height: 48px;
  border-radius: 3px;
  padding: 6px 16px;
  pointer-events: initial;
  box-shadow: 0 3px 5px -1px rgba(0,0,0,0.2),0 6px 10px 0 rgba(0,0,0,0.14),0 1px 18px 0 rgba(0,0,0,0.12);
}

.c2 {
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1 0 264px;
  -ms-flex: 1 0 264px;
  flex: 1 0 264px;
}

.c2 svg,
.c2 i {
  color: white !important;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: white;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c3 button svg,
.c3 button i {
  color: white !important;
}

.c0 {
  position: fixed;
  bottom: 52px;
  left: 64px;
  z-index: 999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
}

.c0 .fade-enter {
  opacity: 0;
}

.c0 .fade-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c0 .fade-exit {
  opacity: 1;
}

.c0 .fade-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

<div
  class="c0"
>
  <div>
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        hi ho
      </div>
      <div
        class="c3"
      >
        <button
          class="md-btn md-btn--icon md-pointer--hover md-inline-block c4"
          id="close-1"
          theme="[object Object]"
          type="button"
        >
          <div
            class="md-ink-container"
          />
          <i
            class="md-icon material-icons md-text--inherit"
          >
            close
          </i>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`(Notifications) Notifications renders to correct snapshot with no items in the queue 1`] = `
.c0 {
  position: fixed;
  bottom: 52px;
  left: 64px;
  z-index: 999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
}

.c0 .fade-enter {
  opacity: 0;
}

.c0 .fade-enter-active {
  opacity: 1;
  -webkit-transition: opacity 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c0 .fade-exit {
  opacity: 1;
}

.c0 .fade-exit-active {
  opacity: 0;
  -webkit-transition: opacity 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

<div
  class="c0"
>
  <div />
</div>
`;
